# mini-database

./: CMakeLists.txt
milestone-1/: mini_database.cpp
test/: test_mini_database.cpp
