cmake_minimum_required(VERSION 3.14)

project(MiniDatabase LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG v1.14.0
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
    mini_database_tests
    test/test_mini_database.cpp
)

target_link_libraries(
    mini_database_tests
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(mini_database_tests)
